wallet connect overflow fix

--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -145,7 +145,7 @@ input:focus {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 65px);
 }
 .toggleoff {
   position: absolute;
